<resources>
    <string name="app_name">uTag</string>
    <string name="app_name_st">SmartThings</string>
    <string name="shortcut_name_find">Find</string>
    <string name="subtitle_split">%1s • %1s</string>
    <string name="hooking_progress_toast">Applying mods, please wait…</string>
    <string name="landing_get_started">Get Started</string>
    <string name="landing_not_signed_in">You need to finish setup first, open uTag to continue</string>
    <string name="landing_open">Open uTag</string>
    <string name="setup_mod_title">SmartThings</string>
    <string name="setup_mod_info_title">SmartThings Mod</string>
    <string name="setup_mod_info_content">In order to work with uTag and bypass Samsung\'s requirements, a modified version of SmartThings is required. uTag will guide you through downloading and installing it.\n\n<b>Note:</b> If your device is rooted with Xposed installed, make sure SmartThings is set up, enable the uTag Xposed module, force stop SmartThings and return to uTag to skip this step.</string>
    <string name="setup_mod_info_action">Start mod download</string>
    <string name="setup_mod_oneui_title">OneUI Detected</string>
    <string name="setup_mod_oneui_desc">This device appears to be running OneUI. Using uTag on a device that officially supports SmartThings Find may restrict functionality, break some SmartThings features or cause unexpected errors. <b>OneUI support is experimental, it may not work on your device. Please do not report bugs that occur on this device.</b> You will be required to sign in to SmartThings from the browser, rather than it using the Samsung Account already on your device.</string>
    <string name="setup_mod_oneui_continue">Continue</string>
    <string name="setup_mod_oneui_incompatible_title">Incompatible OneUI Version Detected</string>
    <string name="setup_mod_oneui_incompatible_desc">This device is running a version of OneUI which is not compatible with the SmartThings Mod required for uTag to function. Please use the official Samsung Find app instead.</string>
    <string name="setup_mod_downloading">Downloading SmartThings…</string>
    <string name="setup_mod_setting_up">Setting up mod…</string>
    <string name="setup_mod_setting_up_subtitle">This may take a moment</string>
    <string name="setup_mod_uninstall_title">Uninstall SmartThings</string>
    <string name="setup_mod_uninstall_content">Since the modified version of SmartThings has a different signature, you must uninstall the currently installed version to continue.\n\n<b>Note:</b> This will clear SmartThings data from your device, requiring you to sign in again.</string>
    <string name="setup_mod_uninstall_action">Uninstall</string>
    <string name="setup_mod_install_title">Ready to install</string>
    <string name="setup_mod_install_content">The modified version of SmartThings is ready to install. You may need to grant uTag permission to install packages to install the mod.</string>
    <string name="setup_mod_install_action">Install</string>
    <string name="setup_mod_setup_title">Set up SmartThings</string>
    <string name="setup_mod_setup_content">Open SmartThings, grant its permissions, sign in and return to uTag to continue the uTag setup process.</string>
    <string name="setup_mod_setup_action">Open SmartThings</string>
    <string name="setup_mod_error_title">Error</string>
    <string name="setup_mod_error_failed_to_get">Failed to load the latest version of the SmartThings mod from the server. Check your connection and try again later.</string>
    <string name="setup_mod_error_failed_to_download">Failed to download the SmartThings mod. Check your connection and try again later.</string>
    <string name="setup_mod_error_close">Close</string>
    <string name="setup_mod_metered_dialog_title">Large Download Warning</string>
    <string name="setup_mod_metered_dialog_content">The SmartThings mod APK file is %1s. Continue to download the file?</string>
    <string name="setup_mod_metered_dialog_positive">Download</string>
    <string name="setup_permissions">Permissions</string>
    <string name="permission_smartthings_title">Required SmartThings Permissions</string>
    <string name="permission_smartthings_content">SmartThings requires the following permissions in order for uTag to be able to scan for and connect to your SmartTag:\n- Location (<b>set to \"Allow all the time\"</b>)\n- Bluetooth / Nearby Devices</string>
    <string name="permission_smartthings_grant">Grant in Settings</string>
    <string name="permission_notification_title">Notification Permission</string>
    <string name="permission_notification_content">uTag requires permission to show notifications in order to display updates</string>
    <string name="permission_notification_grant">Grant</string>
    <string name="permission_battery_title">Disable Battery Optimisations for uTag</string>
    <string name="permission_battery_content">This is required to keep uTag running in the background to monitor Tags</string>
    <string name="permission_smartthings_battery_title">Disable Battery Optimisations for SmartThings</string>
    <string name="permission_smartthings_battery_content">This is required to keep Tags connected over Bluetooth in the background</string>
    <string name="permission_battery_disable">Disable</string>
    <string name="permission_analytics_title">Analytics &amp; Crash Reporting</string>
    <string name="permission_analytics_content">Enable anonymous analytics &amp; crash reporting to help in the development of uTag</string>
    <string name="permission_analytics_allow">Allow</string>
    <string name="permission_analytics_deny">Deny</string>
    <string name="setup_account">Account</string>
    <string name="account_title">Sign in to SmartThings</string>
    <string name="account_content">For uTag to be able to communicate with SmartThings, you must sign in with your Samsung account.</string>
    <string name="account_warning_title">How can I trust uTag?</string>
    <string name="account_warning_content_header">Since uTag requires signing into your Samsung account, how do you know you can trust uTag?</string>
    <string name="account_warning_content_b1">uTag uses the official Samsung Login, in your browser (check the URL)</string>
    <string name="account_warning_content_b2">Your password is not visible to nor can it be saved by uTag and access tokens are kept encrypted on device</string>
    <string name="account_warning_content_b3">uTag is open source and you can inspect the login code on GitHub</string>
    <string name="account_warning_content_footer"><b>Please note that official builds of uTag are only available on GitHub and APKMirror. If you installed uTag from another source, login safety cannot be guaranteed and you should reinstall uTag from a legitimate source.</b></string>
    <string name="account_sign_in">Sign in</string>
    <string name="account_error_title">Error</string>
    <string name="account_error_content">An error occurred starting the sign in process, please check your connection and try again</string>
    <string name="account_error_try_again">Try again</string>
    <string name="account_chrome_warning_title">Sign in with Google</string>
    <string name="account_chrome_warning_content">Due to a Samsung issue, the Sign in with Google option may not work on your browser. If you require this option, please use Chrome to sign in. Otherwise, you can ignore this warning.</string>
    <string name="account_chrome_warning_use_chrome">Use Chrome</string>
    <string name="account_chrome_warning_use_ignore">Ignore</string>
    <string name="login_response_error_title">Error</string>
    <string name="login_response_error_content">An error occurred finishing the sign in process, please try again</string>
    <string name="login_response_error_close">Close</string>
    <string name="settings_main_title">uTag Settings</string>
    <string name="settings_main_mod_error_title">Error</string>
    <string name="settings_main_mod_warning_title">Warning</string>
    <string name="settings_main_mod_no_smartthings_content">uTag could not connect to SmartThings. Check it\'s installed and try again later. If it\'s no longer installed, follow the instructions on the Updates tab to reinstall it.</string>
    <string name="settings_main_mod_not_activated_xposed_content">The uTag mod for SmartThings is not enabled. If you\'re using Xposed, check it\'s enabled and reboot your device. If you\'re not using Xposed, follow the instructions  to install the modded SmartThings from the Updates tab.</string>
    <string name="settings_main_mod_not_activated_patch_content">The uTag mod for SmartThings is not enabled. Please follow the instructions to install it from the Updates tab to fix this.</string>
    <string name="settings_main_mod_outdated_xposed_content">The uTag mod for SmartThings is outdated. uTag functionality may not work correctly, or at all. Force stop SmartThings or reboot your device to fix this.</string>
    <string name="settings_main_mod_outdated_patch_content">The uTag mod for SmartThings is outdated. uTag functionality may not work correctly, or at all. Update SmartThings from the Updates tab to fix this.</string>
    <string name="settings_main_mod_newer_xposed_content">The uTag mod for SmartThings is newer than uTag. uTag functionality may not work correctly, or at all. Force stop SmartThings or reboot your device to fix this.</string>
    <string name="settings_main_mod_newer_patch_content">The uTag mod for SmartThings is newer than uTag. uTag functionality may not work correctly, or at all. Update uTag from the Updates tab to fix this.</string>
    <string name="tag_more_battery_dialog_title">Battery information</string>
    <string name="tag_more_battery_dialog_content">The battery level only updates when the Tag is near this phone or another Galaxy device. If the Tag\'s battery is low, you won\'t be able to install updates or the find the Tag using UWB.</string>
    <string name="tag_more_battery_dialog_sufficient">• Sufficient: 16–100%</string>
    <string name="tag_more_battery_dialog_low">• Low: 6–15%</string>
    <string name="tag_more_battery_dialog_very_low">• Very Low: 0–5%</string>
    <string name="location_history_guide_img_desc">Want to know where your pets have been throughout the day? Check the location history.</string>
    <string name="location_history_guide_subheader">About location history</string>
    <string name="location_history_guide_text_1">Location history is only available for the past 7 days.</string>
    <string name="location_history_guide_text_2">Locations are approximate and may vary even if the device hasn\'t moved.</string>
    <string name="location_history_guide_text_3">Location history will be unavailable if there were no other Galaxy devices near the device during the past 7 days.</string>
    <string name="location_history_guide_button">Got it</string>
    <string name="xda_thread">XDA Thread</string>
    <string name="github">GitHub</string>
    <string name="libraries">Third party libraries</string>
    <string name="donate">Donate</string>
    <string name="bluesky">Follow me on Bluesky</string>
    <string name="about_version">Version %1s\nCreated by Kieron Quinn</string>
    <string name="about_contributors">Contributors</string>
    <string name="about_crowdin">Crowdin</string>
    <string name="update_title_utag">uTag update</string>
    <string name="update_title_smartthings">SmartThings update</string>
    <string name="widget_configuration_preview_empty">Select a Tag to view a preview</string>
    <string name="widget_configuration_preview_error">Error loading preview, try again later</string>
    <string name="widget_configuration_preview_loading">Loading preview…</string>
    <string name="updates_title">Updates</string>
</resources>