<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:orientation="vertical">
            <LinearLayout
                android:background="@drawable/background_card"
                android:backgroundTint="@color/oui_background_color"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_height="174dp"
                    android:layout_width="match_parent"
                    android:src="@drawable/location_history_intro_illust"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/location_history_guide_img_desc"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_8"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:text="@string/location_history_guide_subheader" />
            <LinearLayout
                android:background="@drawable/background_card"
                android:backgroundTint="@color/oui_background_color"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/location_history_guide_text_1"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"/>
                <View
                    android:background="@drawable/panel_item_divider"
                    android:layout_height="1dp"
                    android:backgroundTint="?android:textColorSecondary"
                    android:layout_width="match_parent"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/location_history_guide_text_2"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"/>
                <View
                    android:background="@drawable/panel_item_divider"
                    android:layout_height="1dp"
                    android:backgroundTint="?android:textColorSecondary"
                    android:layout_width="match_parent"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/location_history_guide_text_3"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_height="56dp"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_16"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/location_history_intro_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_ripple_32"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/location_history_guide_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?android:textColorPrimary" />
    </LinearLayout>
    
</LinearLayout>